changing flashback page to have vodqa logo and not text

--- a/layouts/archive.html.erb
+++ b/layouts/archive.html.erb
@@ -6,7 +6,9 @@
                    onclick="ga('send', 'event', 'tw', 'tw')">
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                 </a>
-                <h1>VODQA Chennai</h1>
+                <div class = "vodqa-logo">
+                    <img class="small-8" src="./img/Vodqa-white.png" alt="VodQA" align="center" />
+                </div>
                 <h5>Flashback</h5>
             </div>
         </div>
