changing present and participate link

--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -104,7 +104,7 @@
                     <% else %>
                         <p>
                             registrations closed <br />
-                            <small>(sorry, but check out next geek night)</small>
+                            <small>(sorry, but check out next VodQA)</small>
                         </p>
                     <% end %>
                 <% end %>
