[Agalya/Abi] Modify links for coimbatore accordingly

--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -11,7 +11,7 @@
                     <img class="small-8" src="./img/Vodqa-white.png" alt="VodQA" align="center" />
                 </div>
                 <meta property="og:description" />        
-                <h9>VodQA is an opportunity for testing enthusiast to get together, network and collaborate on the latest developments in software testing world.</h9>
+                <h9>VodQA is an opportunity for testing enthusiasts to get together, network and collaborate on the latest developments in software testing world.</h9>
 
                 <% if @item[:subheader] %>
                     <h6 class="subheader"><%= @item[:subheader] %></h6>
