--- a/layouts/_about_section.html.erb
+++ b/layouts/_about_section.html.erb
@@ -4,8 +4,8 @@
         <div class="large-12 columns social">
             <a rel="nofollow" href="https://www.facebook.com/groups/vodqa/?ref=ts&fref=ts" target="_blank" title="Like us on FaceBook" onclick="ga('send', 'event', 'social', 'like')"><i class="icon-like"></i></a>
             <a rel="nofollow" href="https://www.facebook.com/groups/vodqa/?ref=ts&fref=ts" target="_blank"><i class="icon-facebook-2" title="FaceBook group" onclick="ga('send', 'event', 'social', 'facebook')"></i></a>
-            <a rel="nofollow" href="https://twitter.com/intent/tweet?url=twchennai.github.io/VODQA-Chennai&text=Whats+up&hashtags=vodqachennai" target="_blank" title="Tweet hashtag #vodqachennai" onclick="ga('send', 'event', 'social', 'twitter')"><i class="icon-twitter-2"></i></a>
-            <a rel="nofollow" href="mailto:vodqa-chennai@thoughtworks.com " title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
+            <a rel="nofollow" href="https://twitter.com/intent/tweet?url=twcbe.github.io/vodqa&text=Whats+up&hashtags=ThoughtWorks" target="_blank" title="Tweet hashtag #ThoughtWorks" onclick="ga('send', 'event', 'social', 'twitter')"><i class="icon-twitter-2"></i></a>
+            <a rel="nofollow" href="mailto:vodqa-coimbatore@thoughtworks.com " title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
             <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
         </div>
     </div>
@@ -15,7 +15,7 @@
             <blockquote>
                 <p data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">VodQA, also called Value Oriented Discussion on Quality Analysis is a forum that sports the moto -  'Come Learn Something New'. The forum offers a unique platform within the software testing industry to strengthen the QA community through knowledge sharing.</p>
 
-                <p data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><small><b>"Lets start with selenium"</b> is this editions theme.</small></p>
+                <p data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><small>"Hang around with Selenium" is this edition's theme</small></p>
 
                 <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><small>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://vodqa-chennai.typeform.com/to/SLjLWo" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</small></p>
 
