[Agalya/Abi] Added og image

--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -12,8 +12,8 @@
                 </div>
                 <meta property="og:description" />        
                 <h9>VodQA is an opportunity for testing enthusiasts to get together, network and collaborate on the latest developments in software testing world.</h9>
-
-                <% if @item[:subheader] %>
+                <meta property="og:image" content="./img/vodqa-og-image.png" />
+              <% if @item[:subheader] %>
                     <h6 class="subheader"><%= @item[:subheader] %></h6>
                 <% end %>
                 <% if @item[:subnote] %>
