[Agalya/Abi] Add og image in header

--- a/layouts/_layout.html.erb
+++ b/layouts/_layout.html.erb
@@ -9,6 +9,8 @@
     <title>VodQA Coimbatore - <%= title %></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:description" content="VodQA is an opportunity for testing enthusiasts to get together, network and collaborate on the latest developments in software testing world." />
+    <meta property="og:image" content="./img/vodqa-og-image.png" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
