[Agalya/Abi] Change image type

--- a/layouts/_layout.html.erb
+++ b/layouts/_layout.html.erb
@@ -10,8 +10,8 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:description" content="VodQA is an opportunity for testing enthusiasts to get together, network and collaborate on the latest developments in software testing world." />
-    <meta property="og:image" content="https://twcbe.github.io/vodqa/img/vodqa-og-image.png" />
-    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image" content="https://twcbe.github.io/vodqa/img/vodqa-og-image.jpg" />
+    <meta property="og:image:type" content="image/jpg" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
