Updating changes for VODQA 9th Edition , Aug 2020.

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -71,7 +71,7 @@
 //
 
 .speaker-register-wrapper
-  background: url("../img/banner.png") no-repeat 0 0
+  background: url("../img/Vodqa-Latest2020.png") no-repeat 0 0
   background-size: cover
 
   .speaker-register-form
@@ -144,7 +144,7 @@
   $alt-fg: $green
   +override-colors($main-fg,$main-bg,$alt-fg)
   border-radius: 0
-  background: url('../img/banner.png')
+  background: url('../img/Vodqa-Latest2020.png')
   background-size: cover
 
   @media #{$small}
