--- a/gh-pages/css/app.css
+++ b/gh-pages/css/app.css
@@ -3639,7 +3639,7 @@ button, .button {
         color: #00aa5b; }
 
 .speaker-register-wrapper {
-  background: url("../img/banner.png") no-repeat 0 0;
+  background: url("../img/Vodqa-Latest2020.png") no-repeat 0 0;
   background-size: cover; }
   .speaker-register-wrapper .speaker-register-form {
     background: rgba(0, 0, 0, 0.7); }
@@ -3697,7 +3697,7 @@ button, .button {
   color: white;
   background: #222222 url(../img/white-bg.png);
   border-radius: 0;
-  background: url("../img/banner.png");
+  background: url("../img/Vodqa-Latest2020.png");
   background-size: cover; }
   #intro h1, #intro h2, #intro h3, #intro #archive .grid a .day, #archive .grid a #intro .day, #intro h4, #intro h5, #intro h6, #intro #archive .grid a .month, #archive .grid a #intro .month, #intro .subheader, #intro p, #intro blockquote, #intro small, #intro #archive .grid a .year, #archive .grid a #intro .year {
     color: white; }
