--- a/layouts/archive.html.erb
+++ b/layouts/archive.html.erb
@@ -3,11 +3,12 @@
         <div class="row logo">
             <div class="large-12 columns">
                 <a href="http://www.thoughtworks.com" target="_blank"
-                   onclick="ga('send', 'event', 'tw', 'tw')">
-                    <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
+                    onclick="ga('send', 'event', 'tw', 'tw')" class="tw-logo">
+                    <img src="./img/tw-logo-black.svg" alt="ThoughtWorks" align="center" />
                 </a>
+
                 <div class = "vodqa-logo">
-                    <img class="small-8" src="./img/Vodqa-white.png" alt="VodQA" align="center" />
+                    <span class="text">vodQA<span>
                 </div>
                 <h5>Flashback</h5>
             </div>
