--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -1,114 +1,8 @@
 <% render '_layout', title: start_date.strftime("%b %Y") do %>
-    <section id="intro" class="feature">
-        <div class="row logo">
-            <div class="large-12 columns">
-                <a href="http://www.thoughtworks.com" target="_blank"
-                   onclick="ga('send', 'event', 'tw', 'tw')" class="tw-logo">
-                    <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
-                </a>
+    
+    <%= render '_intro_section' %>
 
-                <div class = "vodqa-logo">
-                    <img class="small-8" src="./img/Vodqa-white.png" alt="VodQA" align="center" />
-                </div>
-
-              <% if @item[:subheader] %>
-                    <h6 class="subheader"><%= @item[:subheader] %></h6>
-                <% end %>
-                <% if @item[:subnote] %>
-                    <div class="subnote"><%= @item[:subnote] %></div>
-                <% end %>
-            </div>
-        </div>
-
-        <div class="row countdown">
-            <div class="small-8 small-offset-2 large-4 large-offset-0 columns date">
-                <p><%= @item[:edition] %><sup><%= @item[:edition].ordinal %></sup> edition</p>
-                <h4><%= start_date.strftime("%b %-d").downcase %></h4>
-            </div>
-            <div class="small-6 large-2 columns counter">
-                <h4><span id="days">&nbsp;</span></h4>
-                <p>days</p>
-            </div>
-            <div class="small-6 large-2 columns counter">
-                <h4><span id="hours">&nbsp;</span></h4>
-                <p>hours</p>
-            </div>
-            <div class="small-6 large-2 columns counter">
-                <h4><span id="minutes">&nbsp;</span></h4>
-                <p>minutes</p>
-            </div>
-            <div class="small-6 large-2 columns counter">
-                <h4 id="seconds">
-                    &nbsp; <!-- the nbsp is required -->
-                    <span id="tick">&nbsp;</span>
-                    <span id="tock">&nbsp;</span>
-                    <span id="tack">&nbsp;</span>
-                </h4>
-                <p>seconds</p>
-            </div>
-        </div>
-
-        <div class="row actions">
-            <div class="large-5 columns participate">
-                <% if item[:participate] %>
-                    <a href="<%= @item[:participate] %>" target="_blank" rel="nofollow"
-                       onclick="ga('send', 'event', 'participate', 'participate')">
-                        <h4>Participate</h4>
-                    </a>
-                    <p>
-                        to learn exciting new stuff <br />
-                        <small>(and to connect with fellow geeks)</small>
-                    </p>
-                <% else %>
-                    <a href="javascript:void(0)">
-                        <h4><strike>Participate</strike></h4>
-                    </a>
-                    <% if start_date.future? %>
-                        <p>
-                            registrations not yet open <br />
-                            <small>(please check out in a few days)</small>
-                        </p>
-                    <% else %>
-                        <p>
-                            registrations closed <br />
-                            <small>(sorry, but check out next geek night)</small>
-                        </p>
-                    <% end %>
-                <% end %>
-            </div>
-            <div class="large-2 columns participate-or-talk">
-                <hr class="show-for-small" />
-                <h6 class="hide-for-small delimiter">&laquo; or &raquo;</h6>
-            </div>
-            <div class="large-5 columns talk">
-                <% if item[:talk] %>
-                    <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow"
-                       onclick="ga('send', 'event', 'talk', 'talk')">
-                        <h4>Present
-                        </h4>
-                    </a>
-                    <p>to share exciting new stuff <br />
-                    <small>(accepted for this and subsequent editions)</small>
-                    </p>
-                <% else %>
-                    <a href="javascript:void(0)">
-                        <h4><strike>Talk</strike></h4>
-                    </a>
-                    <% if start_date.future? %>
-                        <p>
-                            registrations not yet open <br />
-                            <small>(please check out in a few days)</small>
-                        </p>
-                    <% else %>
-                        <p>
-                            registrations closed <br />
-                            <small>(sorry, but check out next VodQA)</small>
-                        </p>
-                    <% end %>
-                <% end %>
-            </div>
-        </div>
-    </section>
+    <%= render '_action_section' %>
 
     <%= render '_about_section' %>
 
