[Ramki] Fix text transisition issues

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -146,8 +146,9 @@
   border-radius: 0
 
   @media (min-width: #{$small-screen})
-    background: url('../img/banner-pattern.jpg')
+    background-image: url('../img/banner-pattern.jpg')
     background-size: cover
+    background-repeat: no-repeat
 
   @media #{$small}
     margin-top: $topbar-height
