--- a/gh-pages/css/app.css
+++ b/gh-pages/css/app.css
@@ -3707,8 +3707,9 @@ button, .button {
     color: #d9d9d9; }
   @media (min-width: 768px) {
     #intro {
-      background: url("../img/banner-pattern.jpg");
-      background-size: cover; } }
+      background-image: url("../img/banner-pattern.jpg");
+      background-size: cover;
+      background-repeat: no-repeat; } }
   @media only screen and (min-width: 768px) {
     #intro {
       margin-top: 45px; } }
