[Ramki] Fix typo in motto

--- a/layouts/_about_section.html.erb
+++ b/layouts/_about_section.html.erb
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="large-12 columns" data-anchor-target="#_about">
             <blockquote>
-                <p data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">vodQA, also called Value Oriented Discussion on Quality Analysis is a forum that sports the moto -  'Come Learn Something New'. The forum offers a unique platform within the software testing industry to strengthen the QA community through knowledge sharing.</p>
+                <p data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">vodQA, also called Value Oriented Discussion on Quality Analysis is a forum that sports the motto -  'Come Learn Something New'. The forum offers a unique platform within the software testing industry to strengthen the QA community through knowledge sharing.</p>
 
                 <p data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><small>vodQA aims at taking you to another level altogether, where you get a wider perspective of testing. You will have the experience of learning some new ways of approaching the problem in hand.</small></p>
 
