[Ramki] Fix event date shown in the header

--- a/layouts/_location_section.html.erb
+++ b/layouts/_location_section.html.erb
@@ -7,11 +7,11 @@
         <div class="row">
             <div class="large-4 columns address" data--100-bottom-top="transform:translateX(-100%)" data--100-bottom="transform:translateX(0)">
                 <p>
-                    <span>ThoughtWorks Technologies Pvt Ltd</span>
-                    <span>KGiSL Campus</span>
-                    <span>365, Thudiyalur Road, Saravanampatti</span>
+                    <span>ThoughtWorks Technologies (India) Pvt Ltd</span>
+                    <span>1st Floor, KCT Tech Park</span>
+                    <span>Thudiyalur Rd, Saravanampatti</span>
                     <span>Coimbatore</span>
-                    <span><small><a href="https://www.google.co.in/maps/place/ThoughtWorks+Technologies+(India)+Pvt+Ltd./@11.0828914,76.9987097,15z/data=!4m5!3m4!1s0x0:0xce2d3eb9118c52e8!8m2!3d11.0828914!4d76.9987097" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small></span>
+                    <span><small><a href="https://www.google.com/maps/place/ThoughtWorks+Technologies+(India)+Pvt+Ltd./@11.0811803,76.9890512,15z/data=!4m5!3m4!1s0x0:0xce2d3eb9118c52e8!8m2!3d11.0811803!4d76.9890512" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small></span>
                 </p>
             </div>
 
