--- a/layouts/_agenda_section.html.erb
+++ b/layouts/_agenda_section.html.erb
@@ -21,6 +21,7 @@
                     <% if agenda[:subtitle] %>
                         <p><small><%= agenda[:subtitle] %></small></p>
                     <% end %>
+
                     <% if agenda[:image] %>
                         <p><img src="img/speaker/<%= agenda[:image] %>" alt="<%= agenda[:speaker] %>" /></p>
                     <% end %>
@@ -44,6 +45,7 @@
                         <% end %>
                         </small></p>
                     <% end %>
+
                 </div>
             </div>
             <% end %>
@@ -53,7 +55,7 @@
 <% else %>
     <section id="agenda" class="feature">
         <div class="row" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">
-            <h2>Sessions</h2>
+            <h2><Agenda></Agenda></h2>
         </div>
         <% @item[:sessions] && @item[:sessions].each_with_index do |session, j| %>
         <div id="session-<%= j %>" class="session">
@@ -91,6 +93,7 @@
                             <% end %>
                             </small></p>
                         <% end %>
+
                         <% if agenda[:speaker_profile] %>
                         <p><small> <%= agenda[:speaker_profile] %> </small></p>
                         <% end %>
