[JC/Dhivya]-Added content for Nov 2020 vodqa edition 11

--- a/layouts/_action_section.html.erb
+++ b/layouts/_action_section.html.erb
@@ -14,7 +14,7 @@
                 <p>
                     to learn exciting new stuff <br />
                     <small>(and to connect with fellow geeks)</small>
-                    <small style="color: red;"><br/>Limited slots Available, Will reach out to you if you get one among them...</small>
+<!--                    <small style="color: red;"><br/>Limited slots Available, Will reach out to you if you get one among them...</small>-->
                 </p>
             <% else %>
                 <a href="javascript:void(0)">
