[Ramki] Include talks in banner

--- a/src/home/banner/index.scss
+++ b/src/home/banner/index.scss
@@ -101,6 +101,7 @@
 }
 
 #banner.active {
+  padding-bottom: 1vmax;
   @media only screen and (min-width: 1441px) {
     background-image: url("../../imgs/abstract-bg-desktop-2x.png");
     min-height: 40vh;
@@ -178,13 +179,100 @@
         text-decoration: none;
       }
     }
+
     .talks {
       width: 70%;
       background: rgba(17, 170, 88, 0.5) 0% 0% no-repeat padding-box;
       border-radius: 6px;
+      padding: 1vmax;
       margin-top: 2vmax;
+
+      @media only screen and (max-width: 1024px) {
+        width: 85%;
+      }
+
       .talkInfo {
-        opacity: 1;
+        display: inline-block;
+        vertical-align: top;
+        width: 60%;
+
+        @media only screen and (max-width: 1024px) {
+          width: 85%;
+        }
+
+        .talk-title {
+          font-size: 1.25vmax;
+          font-weight: 600;
+          padding-bottom: 0.25vmax;
+        }
+
+        .timeSlot {
+          font-size: 0.7vmax;
+          padding-bottom: 0.5vmax;
+        }
+
+        .description {
+          padding-bottom: 1vmax;
+          font-weight: 400;
+        }
+      }
+
+      .speakerInfo {
+        padding-left: 1vmax;
+        display: inline-block;
+
+        .pic {
+          height: 6vmax;
+          border-radius: 50%;
+        }
+      }
+
+      .speakers {
+        padding-left: 1vmax;
+        display: inline-block;
+
+        .speaker + .speaker {
+          padding-top: 1vmax;
+        }
+
+        .pic {
+          display: inline-block;
+          height: 4vmax;
+          width: 4vmax;
+          border-radius: 50%;
+        }
+
+        .info {
+          padding-left: 1vmax;
+          vertical-align: top;
+          display: inline-block;
+        }
+      }
+
+      button {
+        border: none;
+        outline: none;
+        background: none;
+        color: white;
+        cursor: pointer;
+      }
+
+      button:disabled {
+        cursor: default;
+        color: darkgray;
+      }
+
+      button + button {
+        margin-left: 2px;
+      }
+
+      .prev {
+        width: 45px;
+        height: 45px;
+      }
+
+      .bold {
+        font-weight: 600;
       }
     }
   }
