--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -100,6 +100,33 @@
     }
   }
 
+  .background {
+    display: inline-block;
+    height: auto;
+    min-height: 27vmax;
+    width: 40%;
+    margin-top: -5vmax;
+    margin-bottom: -5vmax;
+    margin-left: 10%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 1;
+    position: relative;
+
+    @media only screen and (min-width: 1025px) {
+      background-image: url("../imgs/colloborate-bg-2x.png");
+    }
+
+    @media only screen and (min-width: 481px) and (max-width: 1024px) {
+      background-image: url("../imgs/colloborate-bg.png");
+      min-height: 30vmax;
+    }
+
+    @media only screen and (max-width: 480px) {
+      display: none;
+    }
+  }
+
   .feedback-link {
     font-weight: 600;
     color: #2680eb;
