--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -1,14 +1,20 @@
 .recentEditions {
   margin: 1em;
-  .title {
+
+  .banner {
     font-size: 1.2vmax;
   }
 
   .editions {
+    margin-top: 2vmax;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+
+    .title {
+      font-size: 1.2vmax;
+    }
   }
 }
 
