Fix routing issue

--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -5,6 +5,11 @@
     font-size: 1.2vmax;
   }
 
+  .view-all {
+    margin-left: 8px;
+    text-decoration: none;
+  }
+
   .editions {
     margin-top: 2vmax;
     display: flex;
