[Ramki] Add past editions

--- a/src/home/banner/index.scss
+++ b/src/home/banner/index.scss
@@ -227,6 +227,7 @@
             display: inline-block;
           }
           height: 6vmax;
+          width: 6vmax;
           border-radius: 50%;
         }
 
